add location view and story view

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -49,9 +49,9 @@
         <div ng-include="'sidebarRight.html'" 
                 class="sidebar sidebar-right"></div>
         -->
-        <div class="app" 
-             ui-swipe-right='Ui.turnOn("uiSidebarLeft")'
-             ui-swipe-left='Ui.turnOff("uiSidebarLeft")'>
+        <div class="app">
+             <!--ui-swipe-right='Ui.turnOn("uiSidebarLeft")'-->
+             <!--ui-swipe-left='Ui.turnOff("uiSidebarLeft")'>-->
 
             <!-- Navbars -->
 
