add button for users

--- a/public_html/home.html
+++ b/public_html/home.html
@@ -3,7 +3,7 @@
 
         <div class="list-group text-center">
             <div class="list-group-item list-group-item-home">
-                <h1> Find your Story </h1>
+                <h1> Finde deine Geschichte</h1>
             </div>
             <!--<div class="list-group-item list-group-item-home">-->
             <ui-gmap-google-map center="map.center" zoom="map.zoom" draggable="true" options="options">
