--- a/public_html/index.html
+++ b/public_html/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <!--<base href="/demo/" />-->
-        <title>Mobile Angular UI Demo</title>
+        <title>Munich Munich</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimal-ui" />
@@ -61,12 +61,12 @@
                 </div>
                 <div class="btn-group pull-left" ng-click="goToHome()">
                     <div ui-toggle="uiSidebarLeft" class="btn sidebar-toggle">
-                        <i class="fa fa-bars"></i> Menu
+                        <i class="fa fa-home"></i> Home
                     </div>
                 </div>
                 <div class="btn-group pull-right" ui-yield-to="navbarAction" ng-click="goToNew()">
                     <div ui-toggle="uiSidebarRight" class="btn">
-                        <i class="fa fa-comment"></i> New Story
+                        <i class="fa fa-comment"></i> Deine Geschichte
                     </div>
                 </div>
             </div>
