--- a/public_html/index.html
+++ b/public_html/index.html
@@ -57,11 +57,11 @@
 
             <div class="navbar navbar-app navbar-absolute-top">
                 <div class="navbar-brand navbar-brand-center" ui-yield-to="title">
-                    Munic Munic
+
                 </div>
                 <div class="btn-group pull-left" ng-click="goToHome()">
                     <div ui-toggle="uiSidebarLeft" class="btn sidebar-toggle">
-                        <i class="fa fa-home"></i> Home
+                        <i class="fa fa-home"></i> Munich Munich
                     </div>
                 </div>
                 <div class="btn-group pull-right" ui-yield-to="navbarAction" ng-click="goToNew()">
