--- a/public_html/new.html
+++ b/public_html/new.html
@@ -4,26 +4,26 @@
         <div class="list-group text-center">
             <form style="" id="new" method="post" action="/story/" enctype="multipart/form-data">
                 <div class="form-group has-success has-feedback">
-                    <label>Title</label>
+                    <label>Titel des Bildes</label>
                     <input type="text" name="title"
                            class="form-control"
                            placeholder="What is your Story about?">
                 </div>
                 <div class="form-group has-success has-feedback">
-                    <label>Location</label>
+                    <label>Der Ort</label>
                     <input type="text" name="location"
                            class="form-control"
                            placeholder="Where did it happen?">
                 </div>
 
                 <div class="form-group has-success has-feedback">
-                    <label>Your Story</label>
+                    <label>Deine Geschichte</label>
                     <textarea type="text" name="story" rows="8"
                            class="form-control"
                            placeholder="What is your Story?"></textarea>
                 </div>
                 <div class="form-group has-success has-feedback">
-                    <label>Your Photo</label>
+                    <label>Dein Bild</label>
                     <input type="file" name="upload"
                            class="form-control"
                            placeholder="">
