--- a/public_html/story.html
+++ b/public_html/story.html
@@ -7,7 +7,7 @@
 
             </div>
             <div class="list-group-item list-group-item-home">
-                <h1> {{story.name}} </h1>
+                <h1> {{story.title}} </h1>
                 {{story.story}}
             </div>
         </div>
