--- a/public_html/location.html
+++ b/public_html/location.html
@@ -5,17 +5,18 @@
             <div class="list-group-item list-group-item-home">
                 <h1> {{locationName}} </h1>
             </div>
-            <div class="list-group-item list-group-item-home">
-                <div  ng-repeat="storyObj in stories"  id="{{storyObj.id}}" class="photoContainer" ui-swipe-left='nextPicture(storyObj.id)' ui-swipe-right='previousPicture(storyObj.id)'>
-                   <div class="photoFrame" ng-click="goToStory(storyObj.id)" style="-webkit-transform: rotate(20deg);">
-                         <div class="photo"></div>
-                        <img src="{{ storyObj.picture }}" class="img-responsive center-block" alt="..."/>
-                        
+            <div class="list-group-item list-group-item-home" style="min-height: 450px">
+                <a ng-click="nextPicture()" class="btn btn-default">weiter</a><br><br><br>
+                <div  ng-repeat="storyObj in stories"  id="{{storyObj.id}}" class="photoContainer" >
+                   <div class="photoFrame" ng-click="goToStory(storyObj.id)" ui-swipe-left='nextPicture(storyObj.id)' ui-swipe-right='previousPicture(storyObj.id)' style="{{getRandomDegree()}}">
+                         <div class="photo" style="background: url({{storyObj.picture}});background-size: cover;background-position: center"></div>
+
                         <div class="title">{{storyObj.title}}</div>
 
                     </div>
 
                 </div>
+
             </div>
         </div>
         
